syntax = "proto3";

package shortVideoCoreService.api.v1;

option go_package = "github.com/cloudzenith/DouTok/backend/shortVideoCoreService/api/v1;v1";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "v1/base.proto";

service VideoService {
    rpc FeedShortVideo(FeedShortVideoRequest) returns (FeedShortVideoResponse) {
        option (google.api.http) = {
            post: "/v1/video/feed"
            body: "*"
        };
    };
    rpc GetVideoById(GetVideoByIdRequest) returns (GetVideoByIdResponse) {
        option (google.api.http) = {
            get: "/v1/video/{video_id}"
        };
    };
    rpc PublishVideo(PublishVideoRequest) returns (PublishVideoResponse) {
        option (google.api.http) = {
            post: "/v1/video/publish"
            body: "*"
        };
    };
    rpc ListPublishedVideo(ListPublishedVideoRequest) returns (ListPublishedVideoResponse) {
        option (google.api.http) = {
            post: "/v1/video/list"
            body: "*"
        };
    };

    rpc GetVideoByIdList(GetVideoByIdListRequest) returns (GetVideoByIdListResponse) {};
}

message Author {
    int64 id = 1; // 作者唯一标识
    string name = 2; // 作者昵称
    string avatar = 3; // 作者头像地址
    int64 is_following = 4; // 0-未关注，1-已关注
}

message Video {
    int64 id = 1; // 视频唯一标识
    string title = 2; // 视频标题
    Author author = 3; // 视频作者信息
    string play_url = 4; // 视频播放地址
    string cover_url = 5; // 视频封面地址
    int64 favorite_count = 6; // 视频的点赞总数
    int64 comment_count = 7; // 视频的评论总数
    int64 is_favorite = 8; // 0-未点赞，1-已点赞
    string upload_time = 9; // 视频上传时间
    string description = 10; // 视频描述
}

message FeedShortVideoRequest {
    int64 latest_time = 1;  // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
    int64 user_id = 2 [(validate.rules).int64 = {gt: 0}];
    int64 feed_num = 3 [(validate.rules).int64 = {gt: 0}]; // 返回视频的数量
}

message FeedShortVideoResponse {
    Metadata meta = 1;
    repeated Video videos = 2;
}

message GetVideoByIdRequest {
    int64 video_id = 1 [(validate.rules).int64 = {gt: 0}];
}

message GetVideoByIdResponse {
    Metadata meta = 1;
    Video video = 2;
}

message PublishVideoRequest {
    string title = 1 [
        (validate.rules).string.min_len = 1,
        (validate.rules).string.max_len = 50
    ]; // 视频标题
    string cover_url = 2 [
        (validate.rules).string.min_len = 1,
        (validate.rules).string.max_len = 500
    ]; // 视频封面地址
    string play_url = 3 [
        (validate.rules).string.min_len = 1,
        (validate.rules).string.max_len = 500
    ]; // 视频播放地址
    string description = 4 [(validate.rules).string.max_len = 500]; // 视频描述
    int64 user_id = 5 [(validate.rules).int64 = {gt: 0}]; // 视频作者id
}

message PublishVideoResponse {
    Metadata meta = 1;
    int64 video_id = 2;
}

message ListPublishedVideoRequest {
    int64 user_id = 1 [(validate.rules).int64 = {gt: 0}];
    int64 latest_time = 2; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
    PaginationRequest pagination = 3;
}

message ListPublishedVideoResponse {
    Metadata meta = 1;
    repeated Video videos = 2;
    PaginationResponse pagination = 3;
}

message GetVideoByIdListRequest {
    repeated int64 video_id_list = 1;
}

message GetVideoByIdListResponse {
    Metadata meta = 1;
    repeated Video videos = 2;
}
